# mkdocs-placeholder-plugin

./: .gitignore  .todos  LICENSE  MANIFEST.in  README.md  build-docs.sh  build.sh  known_words.txt  mkdocs.yml  mypy.ini  placeholder-extra.js  placeholder-plugin.yaml  pyproject.toml  requirements.in  requirements.txt  setup.cfg  test-static-replacer-script.sh  vercel.json
docs/: advanced-configuration.md  advanced-usage.md  configuration.md  demo.md  development-warning.js  index.md  inputs.md  replace-modes.md  static_replacements.md  tests.md  themes.md  usage.md  validators.md
docs/tests/: auto-table-empty.md  auto-tables-wide.md  auto-tables.md  basic.md  computed.md  input-tables.md  mermaid_diagrams.md  new-ts-code.md  static_replacements.md  validators.md
src/: mkdocs-placeholder-replace-static.py
src/mkdocs_placeholder_plugin/: __init__.py  assets.py  auto_input_table.py  html_tag_parser.py  input_table.py  input_tag_handler.py  placeholder-plugin.js  placeholder_data.py  plugin.py  plugin_config.py  static_replacer.py  style.py  utils.py  validators.py  validators_predefined.py
src/mkdocs_placeholder_plugin/assets/: __init__.py  placeholder-data.js  placeholder-plugin.js
src/mkdocs_placeholder_plugin/generic/: __init__.py  auto_input_table.py  configuration_parser.py  generic_style.py  html_tag_handler.py  input_table.py  input_tag_handler.py  json_generator.py  new_input_table.py  page_processor.py  parser_utils.py  placeholder_data.py  placeholder_replacer.py  static_replacer.py  validator_functions.py  validators.py  validators_predefined.py
src/mkdocs_placeholder_plugin/generic/config/: __init__.py  configuration.py  cyclic_dependency_detector.py  parser_utils.py  placeholder.py  validator.py
src/mkdocs_placeholder_plugin/generic/static/: input_elements.py  input_table.py  placeholder_replacer.py  table_generator.py  table_replacer.py
src/mkdocs_placeholder_plugin/generic/validators/: __init__.py  basic.py  files.py  internet.py  ip_address.py  network.py
src/mkdocs_placeholder_plugin/javascript/: 00_init.js  10_parse_data.js  15_debug.js  20_placeholder_state.js  30_input.js  35_input_validators.js  40_replace.js  60_auto_tables.js  60_placeholder-plugin.js  80_style.js  90_trigger_actions.js  placeholder-plugin.js
src/mkdocs_placeholder_plugin/mkdocs/: __init__.py  plugin.py  plugin_config.py  style.py  utils.py
typescript/: .eslintrc.js  Dockerfile  README.md  eslint.config.js  in-docker.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
typescript/src/: api.ts  auto_tables.ts  debug.ts  dependency_graph.ts  index.ts  inline-inputs.ts  inputs.ts  main.ts  parse_settings.ts  replacer.ts  state_manager.ts  test.ts  validator.ts  value_expander.ts
typescript/src/inline-editors/: checkbox.ts  dropdown.ts  register.ts  textbox.ts
