[metadata]
name = mkdocs-placeholder-plugin
version = 0.3.0
author = six-two
author_email = pip@six-two.dev
description = Add dynamic placeholders to your mkdocs page
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/mkdocs-placeholder-plugin
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
scripts =
    src/mkdocs-placeholder-replace-static.py
# Older versions will probably work to. If you open an issue I can adjust this value
install_requires =
    mkdocs>=1.4.0

[options.entry_points]
mkdocs.plugins =
    placeholder = mkdocs_placeholder_plugin.mkdocs:PlaceholderPlugin

[options.packages.find]
where = src
